kubernetes/overlays/local/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arlo-demo-app
  namespace: api
spec:
  replicas: 1
