kubernetes/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arlo-demo-local
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.arlo-resilience.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arlo-demo-service
                port:
                  number: 80
